--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home</title> 
+<title>DehuaXU's Personal Website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -33,13 +33,13 @@
 				<div class="menu">
 					<ul class="nav navbar"> 
 						<li><a href="index.html" class="w3ls-hover"><span data-letters="Home">Home</span></a></li>
-						<li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About </span></a></li>
+						<li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About Me</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Work</span></a></li>
-						<li><a href="#" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li> 
-						<li><a class="w3ls-icon" href="#"><span class="glyphicon glyphicon-save"></span></a></li> 
+						<li><a href="#" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact Me</span></a></li>
+
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
@@ -52,8 +52,8 @@
 	<div class="video" data-vide-bg="video/cv">  
 		<div class="container">
 			<div class="banner-text agileinfo-text">  
-				<h1>Leland M. Thompson</h1> 
-				<h6>Web Designer & Developer</h6>
+				<h1>Dehua XU's Personal Website</h1>
+				<h6>Data Worker & Data Analyst</h6>
 			</div>  
 		</div>	
 	</div>	
@@ -73,45 +73,47 @@
 							<img src="images/img1.jpg" class="img-responsive" alt=""/>
 						</div>
 						<div class="col-md-8 about-right wthree">
-							<h3>Hi, i'm <span>Leland M. Thompson </span></h3>
-							<h4>Web Designer & Developer </h4>
+							<h3>Hello, I'm <span>Dehua XU~ </span></h3>
+							<h4>Data worker & Data Analyst </h4>
 							<ul class="address">
 								<li>
 									<ul class="agileits-address-text ">
 										<li><b>D.O.B</b></li>
-										<li>23-06-1980</li>
+										<li>12-10-1997</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>PHONE </b></li>
-										<li>+00 111 222 3333</li>
+										<li>+86 156 636 20160</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li><b>ADDRESS </b></li>
-										<li>756 global Place, North Sydney, Canada.</li>
+										<li><b>ADDRESS</b></li>
+										<li>Tongji University,Shanghai city,P.R.China</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>E-MAIL </b></li>
-										<li><a href="mailto:example@mail.com"> mail@example.com</a></li>
+										<li><a href="mailto:example@mail.com"> dehuaxu@tongji.edu.cn</a></li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li><b>WEBSITE </b></li>
-										<li><a href="http://sc.chinaz.com">sc.chinaz.com</a></li>
+										<li><b>WEBSITE</b></li>
+										<li><a href="http://www.dehuaxu.top">www.dehuaxu.top</a></li>
 									</ul>
 								</li>
 							</ul> 
 						</div> 
 						<div class="clearfix"> </div> 
 						<div class="about-text agileits-w3layouts"> 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh sed accumsan quam.</p>
-							<p class="agile-br"> Aliquam aliquet sapien quis mauris semper suscipit. Maecenas pharetra dapibus posuere. Praesent odio sem, varius quis dolor vel, maximus dapibus mi. Pellentesque mattis mauris neque. Nam aliquam turpis ante, at cursus massa ullamcorper ut  </p>
+							<p>I am a postgraduate student of Shanghai Tongji University. Currently engaged in big data analysis and machine learning.</p>
+							<p class="agile-br"> Familiar with Python, Java and other programming languages, proficient in SQL statements, familiar with MySQL, PostgreSQL databases. At present, I am learning various machine learning algorithms and big data analysis technology (Hadoop technology ecology)</p>
+							<p class="agile-br"> Will be committed to the big data technology and digital management technology applied to various industries, welcome to discuss the application of big data technology, together to contribute to the development of big data!</p>
+							<p class="agile-br">https://github.com/DehuaXU1997</p>
 						</div>
 					</div>
 				</div> 
@@ -131,22 +133,22 @@
 					<div class="skills"> 
 						<div class="col-md-6 bar-grids">
 							<h4><span class="glyphicon glyphicon-cog"></span> Technical Skills </h4>
-							<h6>web design  <span> 80% </span></h6>
+							<h6>SQL(MySql,PostgreSql)  <span> 80% </span></h6>
 							<div class="progress">
 								<div class="progress-bar progress-bar-striped active" style="width: 80%">
 								</div>
 							</div>
-							<h6>ui design & developer <span> 70% </span></h6>
+							<h6>python <span> 70% </span></h6>
 							<div class="progress  w3-agile">
 								<div class="progress-bar progress-bar-striped active" style="width: 70%">
 								</div>
 							</div>
-							<h6>Javascript<span>90% </span></h6>
+							<h6>Java<span>80% </span></h6>
 							<div class="progress  w3-agile">
 								<div class="progress-bar progress-bar-striped active" style="width: 90%">
 								</div>
 							</div>
-							<h6>Photoshop <span> 75% </span></h6>
+							<h6>Hadoop technology ecology  <span> 75% </span></h6>
 							<div class="progress  w3-agile">
 								<div class="progress-bar progress-bar-striped active" style="width: 75%">
 								</div>
@@ -159,17 +161,17 @@
 								<div class="progress-bar progress-bar-striped active" style="width: 85%">
 								</div>
 							</div>
-							<h6>Social media marketing<span> 95% </span></h6>
+							<h6>Social media marketing<span> 80% </span></h6>
 							<div class="progress">
 								<div class="progress-bar progress-bar-striped active" style="width: 95%">
 								</div>
 							</div>
-							<h6>Leadership<span>90% </span></h6>
+							<h6>Leadership<span>95% </span></h6>
 							<div class="progress">
 								<div class="progress-bar progress-bar-striped active" style="width: 90%">
 								</div>
 							</div>
-							<h6>Confidence<span>86% </span></h6>
+							<h6>Confidence<span>90% </span></h6>
 							<div class="progress prgs-w3agile-last">
 								<div class="progress-bar progress-bar-striped active" style="width: 86%">
 								</div>
@@ -194,34 +196,34 @@
 					<div class="experience w3-agileits-info">  
 						<div class="experience-grids">
 							<div class="experience-left">
-								<h3>2014 - Now </h3>
-								<h5>Company Name </h5>
+								<h3>2021.07 - Now </h3>
+								<h5>Shanghai Quant360 Information Technology Co., Ltd</h5>
 							</div>
 							<div class="experience-right">
-								<h4>Senior Web Designer</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Data Intern</h4>
+								<p>The company is an enterprise focusing on quantitative trading system. The data project team is mainly responsible for data development and data product architecture. At present, the work in the project team includes financial data modeling, data cleaning and data analysis</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
 						<div class="experience-grids experience-grids-btm">
 							<div class="experience-left">
-								<h3>2013 - 2014</h3>
-								<h5>Company Name </h5>
+								<h3>2021.06 - Now</h3>
+								<h5>Intellectual property big data laboratory of Shanghai Tongji University</h5>
 							</div>
 							<div class="experience-right">
-								<h4>Graphic Designer</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Data processing assistant</h4>
+								<p>Mainly engaged in data cleaning, data analysis and modeling in the intellectual property big data laboratory.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="experience-grids w3-agileits">
 							<div class="experience-left">
-								<h3>2011 - 2013</h3>
-								<h5>Company Name </h5>
+								<h3>2017 - 2019</h3>
+								<h5>None</h5>
 							</div>
 							<div class="experience-right">
-								<h4>Web Designer & Developer</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Coding Learner</h4>
+								<p>At this stage, I mainly learned Java, HTML, SQL and other programming, and did some small non-commercial projects, such as e-commerce projects, management system running on the console, etc</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -243,23 +245,23 @@
 					<div class="experience">  
 						<div class="experience-grids">
 							<div class="experience-left">
-								<h3>2011<span>(2 Years Course)</span> </h3>
-								<h5> University Name</h5>
+								<h3>2021.09-2023.03<span>(2.5 Years Course)</span> </h3>
+								<h5>Tongji University(CHINA)</h5>
 							</div>
 							<div class="experience-right">
-								<h4>Master of Web Design</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Master of Mechanical Design and Theory</h4>
+								<p>The main research content is large-scale structural health monitoring and signal processing.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
 						<div class="experience-grids experience-grids-btm">
 							<div class="experience-left">
-								<h3>2009<span>(3 Years Course)</span></h3>
-								<h5> University Name</h5>
+								<h3>2016.09-2020.06<span>(4 Years Course)</span></h3>
+								<h5>Northeast Forestry University(CHINA)</h5>
 							</div>
 							<div class="experience-right">
-								<h4>Diploma in Design</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Bachelor of Mechanical and Electronic Engineering</h4>
+								<p>Mainly participated in several scientific research projects and applied for software copyright patents.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
@@ -282,7 +284,7 @@
 						<div class="gallery-row"> 
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
+									<a href="images/g1.jpg" data-lightbox="example-set" data-title="The running process of Hadoop computing">
 										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -292,7 +294,7 @@
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
+									<a href="images/g2.jpg" data-lightbox="example-set" data-title="The results of Python crawler are displayed on the web">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -302,7 +304,7 @@
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
+									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Finite element modeling and analysis system based on Matlab GUI">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -312,7 +314,7 @@
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
+									<a href="images/g4.jpg" data-lightbox="example-set" data-title="Shore bridge structural health monitoring system based on Matlab GUI">
 										<img src="images/g4.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -320,56 +322,7 @@
 									</a>
 								</div>
 							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
-										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>View+</h5> 
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
-										<img src="images/g6.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>View+</h5> 
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
-										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>View+</h5> 
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
-										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>View+</h5> 
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
-										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>View+</h5> 
-										</div>
-									</a>
-								</div>
-							</div>
+
 							<div class="clearfix"> </div>
 						</div>
 						<!--  light box js -->
@@ -432,7 +385,7 @@
 	<!-- footer -->
 	<div class="footer">
 		<div class="container">
-			<p>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="http://guantaow.taobao.com/">厚朴网络淘宝店</a><a target="_blank" href="http://www.moobnn.com">网页模板</a></p>
+			<p>Copyright &copy; 2020+Tongji-Dehua XU All rights reserved.<a target="_blank" href="http://www.dehuaxu.top">Personal Website</a></p>
 		</div>
 	</div>
 	<!-- //footer --> 
