second add files
second add files

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>DehuaXU's Personal Website</title>
+	<link rel="shortcut icon" href="favicon.ico" >
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -113,7 +114,8 @@
 							<p>I am a postgraduate student of Shanghai Tongji University. Currently engaged in big data analysis and machine learning.</p>
 							<p class="agile-br"> Familiar with Python, Java and other programming languages, proficient in SQL statements, familiar with MySQL, PostgreSQL databases. At present, I am learning various machine learning algorithms and big data analysis technology (Hadoop technology ecology)</p>
 							<p class="agile-br"> Will be committed to the big data technology and digital management technology applied to various industries, welcome to discuss the application of big data technology, together to contribute to the development of big data!</p>
-							<p class="agile-br">https://github.com/DehuaXU1997</p>
+							<p class="agile-br">My GitHub Address: https://github.com/DehuaXU1997</p>
+							<a target="_blank" href="https://github.com/DehuaXU1997">My GitHub Address</a>
 						</div>
 					</div>
 				</div> 
@@ -245,7 +247,7 @@
 					<div class="experience">  
 						<div class="experience-grids">
 							<div class="experience-left">
-								<h3>2021.09-2023.03<span>(2.5 Years Course)</span> </h3>
+								<h3>2020.09-2023.03<span>(2.5 Years Course)</span> </h3>
 								<h5>Tongji University(CHINA)</h5>
 							</div>
 							<div class="experience-right">
