forth add files
forth add files

--- a/index.html
+++ b/index.html
@@ -84,8 +84,14 @@
 									</ul>
 								</li>
 								<li>
+									<ul class="agileits-address-text ">
+										<li><b>LANGUAGE</b></li>
+										<li>English, Chinese</li>
+									</ul>
+								</li>
+								<li>
 									<ul class="agileits-address-text">
-										<li><b>MY FAVORITE SONG</b></li>
+										<li><b>FAVORITE SONG</b></li>
 										<li>Joi Chua《眼里眉间》</li>
 									</ul>
 								</li>
