--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 							<p>I am a postgraduate student of Shanghai Tongji University. Currently engaged in big data analysis and machine learning.</p>
 							<p class="agile-br"> Familiar with Python, Java and other programming languages, proficient in SQL statements, familiar with MySQL, PostgreSQL databases. At present, I am learning various machine learning algorithms and big data analysis technology (Hadoop technology ecology)</p>
 							<p class="agile-br"> Will be committed to the big data technology and digital management technology applied to various industries, welcome to discuss the application of big data technology, together to contribute to the development of big data!</p>
-							<p class="agile-br">My GitHub Address: https://github.com/DehuaXU1997</p>
-							<a target="_blank" href="https://github.com/DehuaXU1997">My GitHub Address</a>
+							<a target="_blank" href="https://github.com/DehuaXU1997">My GitHub Address: </a>
+							<p class="agile-br">https://github.com/DehuaXU1997</p>
 						</div>
 					</div>
 				</div> 
