--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="navbar-header logo">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					Menu
+					MENU
 				</button>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
